updated swagger to implement bearer auth
