# docs/swagger.yaml
@@ -596,4 +596,9 @@ paths:
       summary: Update student
       tags:
       - Students
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
